--- a/src/diseases/skin/flea-allergic-dermatitis.html
+++ b/src/diseases/skin/flea-allergic-dermatitis.html
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Алергичен дерматит при ухапване от бълхи (Flea Allergy Dermatitis, <strong><strong>FAD</strong></strong>)</h1>
+                    <h1>Алергичен дерматит при ухапване от бълхи (Flea Allergy Dermatitis, FAD)</h1>
                     
                     <h2>Какво е алергичен дерматит от бълхи и какво го причинява?</h2>
                     <p>Алергичният дерматит от бълхи (<strong>FAD</strong>) е често срещано кожно заболяване при кучета и котки, причинено от <strong>алергична реакция</strong> <strong>към слюнката на бълхи</strong>. Когато бълхите ухапят животното, те инжектират слюнка в кожата, предизвиквайки интензивен алергичен отговор при чувствителните животни. Дори едно ухапване от бълха може да причини силен сърбеж и дискомфорт.</p>
