--- a/src/what-for-you/are-you-ready-for-dog/are-you-ready.html
+++ b/src/what-for-you/are-you-ready-for-dog/are-you-ready.html
@@ -5,27 +5,8 @@
 
     <section id="content-section">
         <section id="article-review">
-            <div>
-                <a href="../../what-for-you/dog/what-for-you.html"><button id="dog-btn-clicked">Куче</button></a> 
-                или 
-                <a href="../../what-for-you/dog/what-for-you.html"><button id="cat-btn">Коте</button></a>
-            </div>
-            <div class="choose-message">Избери вид любимец</div>
-            <ol>
-                <li><a href="../dog/anatomy.html"><span class="bold">Анатомия</span> на кучето</a></li>
-                <li><a href="../dog/nature.html"><span class="bold">Природа</span> на кучето</a></li>
-                <li><a href="../dog/life-expectancy.html"><span class="bold">Продължителност</span> на живота на кучето</a></li>
-                <li><a href="../dog/brief-history.html">Кратка история на кучето</a></li>
-                <li><a href="../dog/perks.html"><span class="bold">Предимствата</span> да имаш куче</a></li>
-                <li><a href="../are-you-ready/are-you-ready.html">Въпросник: <span class="bold">Готов ли си</span> за куче?</a></li>
-                <li><a href="../breeds/dog-breed-selector.html">Въпросник: <span class="bold">Какво куче</span> да си взема?</a></li>
-                <li><a href="../breeds/dog-breeds.html">Библиотека с породи кучета</a></li>
-                <li><a href="../dog/young-or-adult.html"><span class="bold">Малко кученце или пораснало</span> куче да взема</a></li>
-                <li><a href="../dog/male-or-female.html"><span class="bold">Мъжко или женско</span> куче да взема</a></li>
-                <li><a href="../dog/where.html"><span class="bold">Откъде</span> мога да се сдобия с куче?</a></li>
-                <li><a href="../dog/before.html"><span class="bold">Въпросник</span> (Контролен списък) преди да си взема куче</a></li>
-            </ol>
-        </section> 
+            <include what="@@components/what-for-you-dog.html"></include>
+        </section>
     
         <section id="main-content">
             <div id="content" class="content">
