--- a/diseases-infectious-feline-herpesvirus-infection.html
+++ b/diseases-infectious-feline-herpesvirus-infection.html
@@ -628,9 +628,10 @@
     </div>
 </header>
 
+<section id="content-section">
 
-<section id="article-review">
-    <div>
+    <section id="article-review">
+        <div>
     <a href="./diseases-dog-diseases.html" style="text-decoration: none;">
         <button id="dog-btn">Куче</button>
     </a>
@@ -661,139 +662,139 @@
         </a>
     </li>
 </ol>
-</section>
+    </section>
 
-<section id="main-content">
-    <div id="content" class="content">
-        <div id="overlay"></div>
+    <section id="main-content">
+        <div id="content" class="content">
+            <div id="overlay"></div>
 
-        <div id="articleContent">
-            <div id="article-content--cats">
-                <h1>Котешка херпесвироза</h1>
+            <div id="articleContent">
+                <div id="article-content--cats">
+                    <h1>Котешка херпесвироза</h1>
 
-                <h2>Какво е котешка херпесвироза и какво я причинява?</h2>
-                <p>Котешката херпесвироза (котешката херпесвирусна инфекция) е заболяване по котките, което се причинява
-                    от вирус Feline Herpesvirus 1 (FHV-1), който атакува очите и носа на заразените животни.</p>
+                    <h2>Какво е котешка херпесвироза и какво я причинява?</h2>
+                    <p>Котешката херпесвироза (котешката херпесвирусна инфекция) е заболяване по котките, което се причинява
+                        от вирус Feline Herpesvirus 1 (FHV-1), който атакува очите и носа на заразените животни.</p>
 
-                <h2>Кои котки са най-застрашени?</h2>
-                <p>Херпесвирозата може да засегне котки на всякаква възраст, но е най-често срещана при:</p>
-                <p><strong>Котенца</strong>: Те се засягат най-често, тъй като техните имунни системи все още се
-                    развиват.</p>
-                <p><strong>Неваксинирани котки</strong>: Всяка котка, което не е получила всички необходими ваксини, е в
-                    риск.</p>
+                    <h2>Кои котки са най-застрашени?</h2>
+                    <p>Херпесвирозата може да засегне котки на всякаква възраст, но е най-често срещана при:</p>
+                    <p><strong>Котенца</strong>: Те се засягат най-често, тъй като техните имунни системи все още се
+                        развиват.</p>
+                    <p><strong>Неваксинирани котки</strong>: Всяка котка, което не е получила всички необходими ваксини, е в
+                        риск.</p>
 
-                <h2>Как се инфектират котките?</h2>
-                <p>Вирусът се разпространява със <strong>болна котка</strong> или видимо здрава <strong>котка, която е
-                        преносител</strong> на заболяването. Заразените животни излъчват вируса със <strong>секретите от
-                        очите </strong>и<strong> носа</strong>. Макар че вирусът умира бързо в околната среда, е
-                    възможно котка да се зарази от използването на купички за храна или други предмети, които са
-                    използвани от котка-преносител на херпесвирозата. При <strong>бременните котки</strong> вирусът на
-                    херпесвирозата може да премине през плацентата и да доведе до тежка херпесвирусна инфекция на
-                    малките котенца.</p>
+                    <h2>Как се инфектират котките?</h2>
+                    <p>Вирусът се разпространява със <strong>болна котка</strong> или видимо здрава <strong>котка, която е
+                            преносител</strong> на заболяването. Заразените животни излъчват вируса със <strong>секретите от
+                            очите </strong>и<strong> носа</strong>. Макар че вирусът умира бързо в околната среда, е
+                        възможно котка да се зарази от използването на купички за храна или други предмети, които са
+                        използвани от котка-преносител на херпесвирозата. При <strong>бременните котки</strong> вирусът на
+                        херпесвирозата може да премине през плацентата и да доведе до тежка херпесвирусна инфекция на
+                        малките котенца.</p>
 
-                <h2>Как вирусът действа в тялото?</h2>
-                <p>Вирусът навлиза в тялото на котката през <strong>устата или носа</strong>, обикновено когато котката
-                    лиже или души замърсени предмети. Той се разпространява в <strong>глътката, трахеята и белите
-                        дробове</strong>.</p>
-                <p>Вирусът причинява и т. нар. <strong>латентна инфекция</strong>:</p>
-                <ul>
-                    <li>когато котката се зарази с вируса, вирусът навлиза в носа, очите и/или устата, където причинява
-                        възпаление. Тогава котката започва да киха и кашля и се появяват изтечения от носа и/или очите.
-                    </li>
-                    <li>След като причини възпалението на горните дихателни пътища, вирусът отива към нервите (най-често
-                        n. trigeminus), където се „скрива“ в нервите.</li>
-                    <li>При стрес, друго заболяване или отслабена имунна система, вирусът може да се
-                        „събуди“ и да причини отново котешка херпевироза.</li>
-                </ul>
+                    <h2>Как вирусът действа в тялото?</h2>
+                    <p>Вирусът навлиза в тялото на котката през <strong>устата или носа</strong>, обикновено когато котката
+                        лиже или души замърсени предмети. Той се разпространява в <strong>глътката, трахеята и белите
+                            дробове</strong>.</p>
+                    <p>Вирусът причинява и т. нар. <strong>латентна инфекция</strong>:</p>
+                    <ul>
+                        <li>когато котката се зарази с вируса, вирусът навлиза в носа, очите и/или устата, където причинява
+                            възпаление. Тогава котката започва да киха и кашля и се появяват изтечения от носа и/или очите.
+                        </li>
+                        <li>След като причини възпалението на горните дихателни пътища, вирусът отива към нервите (най-често
+                            n. trigeminus), където се „скрива“ в нервите.</li>
+                        <li>При стрес, друго заболяване или отслабена имунна система, вирусът може да се
+                            „събуди“ и да причини отново котешка херпевироза.</li>
+                    </ul>
 
-                <h2>Какви са симптомите на котешката херпесвироза?</h2>
-                <p>Инкубационният период (времето между заразяването и появата на симптомите) обикновено е от 3 до 7
-                    дни. Често срещаните признаци включват:</p>
-                <ul>
-                    <li>отпадналост</li>
-                    <li>треска</li>
-                    <li>кихане</li>
-                    <li>кашлица</li>
-                    <li>конюнктивит</li>
-                    <li>ринит</li>
-                    <li>изтечения от носа</li>
-                    <li>изтечения от очите</li>
-                    <li>язви на очите</li>
-                </ul>
+                    <h2>Какви са симптомите на котешката херпесвироза?</h2>
+                    <p>Инкубационният период (времето между заразяването и появата на симптомите) обикновено е от 3 до 7
+                        дни. Често срещаните признаци включват:</p>
+                    <ul>
+                        <li>отпадналост</li>
+                        <li>треска</li>
+                        <li>кихане</li>
+                        <li>кашлица</li>
+                        <li>конюнктивит</li>
+                        <li>ринит</li>
+                        <li>изтечения от носа</li>
+                        <li>изтечения от очите</li>
+                        <li>язви на очите</li>
+                    </ul>
 
-                <h2>Как се диагностицира котешката херпесвироза?</h2>
-                <p>Ако Вашата котка проявява симптоми на котешка херпесвироза, Вашият ветеринарен лекар ще извърши
-                    диагностични тестове, които може да включват:</p>
-                <ul>
-                    <li><strong>Физически преглед</strong>: Проверка за признаци като изтечения от очите и носа, язви на
-                        очите и треска.</li>
-                    <li><strong>ELISA или IFA тест</strong>: Бърз тест за откриване на вируса на херпесвирозата в кръвта
-                        на заразения любимец.</li>
-                    <li><strong>PCR тест</strong>: Изключително чувствителен тест, който открива генетичния материал на
-                        вируса.</li>
-                    <li><strong>Кръвни тестове</strong>: Те могат да покажат променени нива на бели кръвни клетки
-                        (лимфоцитоза или лимфопения) и анемия.</li>
-                </ul>
+                    <h2>Как се диагностицира котешката херпесвироза?</h2>
+                    <p>Ако Вашата котка проявява симптоми на котешка херпесвироза, Вашият ветеринарен лекар ще извърши
+                        диагностични тестове, които може да включват:</p>
+                    <ul>
+                        <li><strong>Физически преглед</strong>: Проверка за признаци като изтечения от очите и носа, язви на
+                            очите и треска.</li>
+                        <li><strong>ELISA или IFA тест</strong>: Бърз тест за откриване на вируса на херпесвирозата в кръвта
+                            на заразения любимец.</li>
+                        <li><strong>PCR тест</strong>: Изключително чувствителен тест, който открива генетичния материал на
+                            вируса.</li>
+                        <li><strong>Кръвни тестове</strong>: Те могат да покажат променени нива на бели кръвни клетки
+                            (лимфоцитоза или лимфопения) и анемия.</li>
+                    </ul>
 
-                <h2>Как се лекува котешката херпесвироза?</h2>
-                <p>Лечението е симптоматично и насочено към стабилизиране на състоянието на животното. Необходимо е
-                    болните животни да се поставят на чисто и топло място. Основните стъпки на лечението включват:</p>
-                <ul>
-                    <li>Почистване на секретите от носа и от очите.</li>
-                    <li>Очни капки и/или маз за очите.</li>
-                    <li>Антибиотици – често калицивирозата води до други инфекции на дихателните пътища.</li>
-                    <li>Хранителни добавки – незаменимата аминокиселина лизин помага на котките да преборят вируса
-                        на калицивирозата.</li>
-                    <li>Инхалации.</li>
-                </ul>
+                    <h2>Как се лекува котешката херпесвироза?</h2>
+                    <p>Лечението е симптоматично и насочено към стабилизиране на състоянието на животното. Необходимо е
+                        болните животни да се поставят на чисто и топло място. Основните стъпки на лечението включват:</p>
+                    <ul>
+                        <li>Почистване на секретите от носа и от очите.</li>
+                        <li>Очни капки и/или маз за очите.</li>
+                        <li>Антибиотици – често калицивирозата води до други инфекции на дихателните пътища.</li>
+                        <li>Хранителни добавки – незаменимата аминокиселина лизин помага на котките да преборят вируса
+                            на калицивирозата.</li>
+                        <li>Инхалации.</li>
+                    </ul>
 
-                <h2>Как да предотвратим котешката херпесвироза?</h2>
-                <p>Предотвратяването на котешката херпесвироза е много по-лесно от лечението ѝ. Ето как да защитите
-                    Вашата котка:</p>
-                <ol>
-                    <li><strong>Ваксинация</strong>: Най-ефективният начин за предотвратяване на котешката херпесвироза.
-                        Котенцата трябва да получат първата си ваксина на 8-9 седмици, последвана от бустер доза след
-                        3-4 седмици. Възрастните котки изискват ежегодни ваксинации. Ваксинациите невинаги предпазват
-                        Вашата котка от заразяване с калицивироза, но те намаляват значително тежестта на протичане на
-                        заболяването.</li>
-                    <li><strong>Избягване на рискови места</strong>: Докато Вашето коте не е напълно ваксинирано,
-                        избягвайте да допускате любимеца си навън.</li>
-                    <li><strong>Контролиране на социализацията</strong>: Позволявайте на Вашата котка да контактува само
-                        с напълно ваксинирани котки.</li>
-                </ol>
+                    <h2>Как да предотвратим котешката херпесвироза?</h2>
+                    <p>Предотвратяването на котешката херпесвироза е много по-лесно от лечението ѝ. Ето как да защитите
+                        Вашата котка:</p>
+                    <ol>
+                        <li><strong>Ваксинация</strong>: Най-ефективният начин за предотвратяване на котешката херпесвироза.
+                            Котенцата трябва да получат първата си ваксина на 8-9 седмици, последвана от бустер доза след
+                            3-4 седмици. Възрастните котки изискват ежегодни ваксинации. Ваксинациите невинаги предпазват
+                            Вашата котка от заразяване с калицивироза, но те намаляват значително тежестта на протичане на
+                            заболяването.</li>
+                        <li><strong>Избягване на рискови места</strong>: Докато Вашето коте не е напълно ваксинирано,
+                            избягвайте да допускате любимеца си навън.</li>
+                        <li><strong>Контролиране на социализацията</strong>: Позволявайте на Вашата котка да контактува само
+                            с напълно ваксинирани котки.</li>
+                    </ol>
 
-                <h2>Какво да направите, ако подозирате котешката херпесвироза?</h2>
-                <p>Ако забележите симптоми на котешката херпесвироза при Вашата котка, незабавно се свържете с
-                    ветеринарен лекар. <strong>Колкото по-рано започне лечението, толкова по-добри са шансовете за
-                        оцеляване</strong>. Котешката херпесвироза може да бъде смъртоносна, но с навременни грижи много
-                    котки се възстановяват напълно.</p>
+                    <h2>Какво да направите, ако подозирате котешката херпесвироза?</h2>
+                    <p>Ако забележите симптоми на котешката херпесвироза при Вашата котка, незабавно се свържете с
+                        ветеринарен лекар. <strong>Колкото по-рано започне лечението, толкова по-добри са шансовете за
+                            оцеляване</strong>. Котешката херпесвироза може да бъде смъртоносна, но с навременни грижи много
+                        котки се възстановяват напълно.</p>
 
-                <h2>В резюме:</h2>
-                <p>Херпесвирозата е тежко вирусно заболяване, особено опасно за млади и неваксинирани котки. Симптомите
-                    включват отпадналост, изтечения от носа и очите и кашлица. Ваксинацията и добрата хигиена са
-                    най-добрите начини за предотвратяване на заболяването. Навременното лечение значително подобрява
-                    шансовете за оцеляване.</p>
+                    <h2>В резюме:</h2>
+                    <p>Херпесвирозата е тежко вирусно заболяване, особено опасно за млади и неваксинирани котки. Симптомите
+                        включват отпадналост, изтечения от носа и очите и кашлица. Ваксинацията и добрата хигиена са
+                        най-добрите начини за предотвратяване на заболяването. Навременното лечение значително подобрява
+                        шансовете за оцеляване.</p>
 
-                <br>
-                <div class="other-article">
-                    <a href="./feline-infectious-peritonitis.html">
-                        <div class="other-article-prev">
-                            « Предходна статия:
-                        </div>
-                    </a>
+                    <br>
+                    <div class="other-article">
+                        <a href="./feline-infectious-peritonitis.html">
+                            <div class="other-article-prev">
+                                « Предходна статия:
+                            </div>
+                        </a>
 
-                    <a href="./feline-calicivirus-infection.html">
-                        <div class="other-article-next">
-                            Следваща статия »
-                        </div>
-                    </a>
+                        <a href="./feline-calicivirus-infection.html">
+                            <div class="other-article-next">
+                                Следваща статия »
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
-
             </div>
-        </div>
 
-        <!-- SHARE -->
-        <div id="share-with-others">
+            <!-- SHARE -->
+            <div id="share-with-others">
     <div class="share-with-others-text">Помогни на повече стопани да се грижат правилно за своите мили любимци:</div>
     <div class="share-panel">
         <div id="postFacebookBtn" class="share-box">
@@ -820,9 +821,9 @@
     <img src="./img/share-baner.png" style="height: 110px;">
 </div>
 
-    </div>
+        </div>
+    </section>
 </section>
-
 
 
 <!-- FOOTER -->
