Mutsuna, pet Years tests fixed

--- a/src/growth/cat/pet-years.html
+++ b/src/growth/cat/pet-years.html
@@ -4,6 +4,8 @@
     <span class="breadcrumb-link">  /  </span>
     <a class="breadcrumb-link no-dec" href="./growth/growth.html">Растеж и развитие</a>        
 </include>
+<link rel="stylesheet" href="./calculator.css" />
+
 
 <section id="content-section">
 
@@ -88,16 +90,16 @@
                             поведенчески проблеми в по-напреднала възраст изкореняването им е по-трудно.
                             <br>
                             Също така, за да нямате проблеми за в бъдеще, е добре да привикнете котето си да свикне с
-                            пътуването в кола и с ветеринарните прегледи. (Виж: Преглед при ветеринарен лекар). Не
+                            пътуването в кола и с ветеринарните прегледи. (Виж: <a href="./health-care-cat-vet-exam.html">Преглед при ветеринарен лекар</a>). Не
                             забравяйте и за най-жестоката борба на всички котешки стопани – хапчетата!
                             <br>
-                            Можете да започнете да приучавате котето си към миенето на зъби. (Виж: Как да се грижа?)
+                            Можете да започнете да приучавате котето си към миенето на зъби. (Виж: <a href="./how-take-care-cat-how-take-care.html">Как да се грижа?</a>)
                             <br>
-                            Точно сега ще трябва и да помислите дали искате да кастрирате вашето коте. (виж: Кастрация).
+                            Точно сега ще трябва и да помислите дали искате да кастрирате вашето коте. (Виж: <a href="./growth-cat-castration.html">Кастрация</a>).
                             <br>
-                            През този етап от живота котките се обезпаразитяват и ваксинират. (Виж: Обезпаразитяване,
-                            Ваксиниране). Поради градящия се в момента имунитет, бъдете бдителни за появата на
-                            инфекциозни заболявания. *Виж: Заболявания“
+                            През този етап от живота котките се обезпаразитяват и ваксинират. (Виж: <a href="./growth-cat-deworming.html">Обезпаразитяване</a>,
+                            <a href="./growth-cat-vaccination.html">Ваксиниране</a>). Поради градящия се в момента имунитет, бъдете бдителни за появата на
+                            инфекциозни заболявания. *Виж: <a href="./diseases-cat-top-diseases.html">Заболявания“</a>
                             <br>
                             Бъдете гъвкави, защото до достигане на зрялост се налага следене на теглото и хранене по
                             схема, тъй като котето Ви расте.
@@ -170,3 +172,4 @@
 
 <!-- FOOTER -->
 <include what="@@layout/footer.html"></include>
+<script src="./calculator.js"></script>
