--- a/src/growth/dog/male-or-female.html
+++ b/src/growth/dog/male-or-female.html
@@ -49,7 +49,7 @@
                             <p><strong>Защо е важно това?</strong></p>
                             <p>Знаейки пола на вашето животно, можете:</p>
                             <ul>
-                            <li>Да планирате кастрация или стерилизация, което предотвратява нежелани бременности и намалява риска от определени заболявания.</li>
+                            <li>Да планирате кастрация, което предотвратява нежелани бременности и намалява риска от определени заболявания.</li>
                             <li>Да разберете поведението на Вашия любимец, тъй като някои черти могат да варират според пола.</li>
                             </ul>
 
