--- a/src/health-care/dog/first-aid.html
+++ b/src/health-care/dog/first-aid.html
@@ -33,7 +33,7 @@
                         оглеждате и при нужда да ги режете.</p>
                     <p><strong>Дълги клещи тип човка</strong> - можете да ги използвате, когато любимецът Ви е
                         погълнал някакъв предмет, който Вие виждате и можете да извадите.</p>
-                    <p><strong>Пласмасова карта</strong> - &ndash; Може да се използва за безопасно премахване на
+                    <p><strong>Пластмасова карта</strong> &ndash; Може да се използва за безопасно премахване на
                         жило.</p>
 
                     <h2>Медикаменти и разтвори:</h2>
