--- a/src/what-for-you/are-you-ready-for-dog/are-you-ready.html
+++ b/src/what-for-you/are-you-ready-for-dog/are-you-ready.html
@@ -1,6 +1,7 @@
 <!-- HEADER -->
 <include what="@@layout/header.html" var:title="Готов ли си за куче"></include>
 <include what="@@layout/menu.html"></include>
+<link rel="stylesheet" href="./are-you-ready.css" />
 
 
     <section id="content-section">
