--- a/src/what-for-you/cat/young-or-adult.html
+++ b/src/what-for-you/cat/young-or-adult.html
@@ -89,7 +89,7 @@
                                         обикновено са по-здрави, те се нуждаят от серия ваксинации и лечения, за да
                                         останат здрави докато растат. Това може да е скъпо първоначално.</li>
                                     <li><strong>Кастрация:</strong> Ако вземете котенце, ще трябва да планирате
-                                        кастрация или стерилизация, когато достигнат достатъчна възраст, което включва
+                                        кастрация, когато достигнат достатъчна възраст, което включва
                                         допълнителни ветеринарни посещения и разходи.</li>
                                 </ul>
                             </li>
