--- a/src/what-for-you/dog/where.html
+++ b/src/what-for-you/dog/where.html
@@ -153,13 +153,13 @@
                         <br>
 
                         <div class="other-article">
-                            <a href="./male-or-female.html">
+                            <a href="./what-for-you/dog/male-or-female.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./before.html">
+                            <a href="./what-for-you/dog/before.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
