--- a/src/what-for-you/dog/young-or-adult.html
+++ b/src/what-for-you/dog/young-or-adult.html
@@ -211,7 +211,7 @@
                                 </div>
                             </a>
 
-                            <a href="./young-or-adult.html">
+                            <a href="./what-for-you/dog/male-or-female.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
