--- a/src/growth/dog/pet-years.html
+++ b/src/growth/dog/pet-years.html
@@ -4,6 +4,7 @@
     <span class="breadcrumb-link">  /  </span>
     <a class="breadcrumb-link no-dec" href="./growth/growth.html">Растеж и развитие</a>            
 </include>
+<link rel="stylesheet" href="./calculator-dog.css" />
 
 
 <div class="overlay-desktop"></div>
@@ -195,16 +196,16 @@
                             по-напреднала възраст изкореняването им е по-трудно.
                             <br>
                             Също така, за да нямате проблеми за в бъдеще, е добре да привикнете кутрето си да свикне с
-                            пътуването в кола и с ветеринарните прегледи. (Виж: Преглед при ветеринарен лекар). Не
+                            пътуването в кола и с ветеринарните прегледи. (Виж: <a href="./health-care-dog-vet-exam.html">Преглед при ветеринарен лекар</a>). Не
                             забравяйте и за жестоката борба с даването на хапчета през устата!
                             <br>
-                            Можете да започнете да приучавате кутрето си към миенето на зъби. (Виж: Как да се грижа?)
+                            Можете да започнете да приучавате кутрето си към миенето на зъби. (Виж: <a href="./how-take-care-dog-how-take-care.html">Как да се грижа?</a>)
                             <br>
-                            Точно сега ще трябва и да помислите дали искате да кастрирате вашето куче. (виж: Кастрация).
+                            Точно сега ще трябва и да помислите дали искате да кастрирате вашето куче. (Виж: <a href="./growth-dog-castration.html">Кастрация</a>).
                             <br>
-                            През този етап от живота кучетата се обезпаразитяват и ваксинират. (Виж: Обезпаразитяване,
-                            Ваксиниране). Поради градящия се в момента имунитет, бъдете бдителни за появата на
-                            инфекциозни заболявания. (Виж: Заболявания“)
+                            През този етап от живота кучетата се обезпаразитяват и ваксинират. (Виж: <a href="./growth-dog-deworming.html">Обезпаразитяване</a>,
+                            <a href="./growth-dog-vaccination.html">Ваксиниране</a>). Поради градящия се в момента имунитет, бъдете бдителни за появата на
+                            инфекциозни заболявания. (Виж: <a href="./diseases-dog-top-diseases.html">Заболявания</a>“)
                             <br>
                             Бъдете гъвкави, защото до достигане на зрялост се налага следене на теглото и хранене по
                             схема, тъй като кучето Ви расте.
@@ -277,3 +278,4 @@
 
 <!-- FOOTER -->
 <include what="@@layout/footer.html"></include>
+<script src="./calculator-dog.js"></script>
