--- a/src/health-care/cat/first-aid.html
+++ b/src/health-care/cat/first-aid.html
@@ -32,7 +32,7 @@
                         да ги режете.</p>
                     <p><strong>Дълги клещи тип човка</strong> - можете да ги използвате, когато любимецът Ви е погълнал
                         някакъв предмет, който Вие виждате и можете да извадите.</p>
-                    <p><strong>Пласмасова карта</strong> - &ndash; Може да се използва за безопасно премахване на жило.
+                    <p><strong>Пластмасова карта</strong> &ndash; Може да се използва за безопасно премахване на жило.
                     </p>
 
                     <h2>Медикаменти и разтвори:</h2>
