Section What for you wrong urls

--- a/src/what-for-you/are-you-ready-for-cat/are-you-ready.html
+++ b/src/what-for-you/are-you-ready-for-cat/are-you-ready.html
@@ -1,7 +1,7 @@
 <!-- HEADER -->
 <include what="@@layout/header.html" var:title="Въпросник: Готов ли си за котка?"></include>
 <include what="@@layout/menu.html"></include>
-
+<link rel="stylesheet" href="./are-you-ready.css" />
 
      <section id="content-section">
         <section id="article-review">
