--- a/src/what-for-you/cat/before.html
+++ b/src/what-for-you/cat/before.html
@@ -982,13 +982,13 @@
                     </table>
 
                     <div class="other-article">
-                        <a href="where.html">
+                        <a href="./what-for-you/cat/where.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="anatomy.html">
+                        <a href="./what-for-you/cat/anatomy.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
