--- a/src/what-for-you/cat/brief-history.html
+++ b/src/what-for-you/cat/brief-history.html
@@ -113,16 +113,15 @@
                         <p>Котките продължават да пленяват сърцата на милиони хора по света със своята грация и
                             мистериозна натура. Тяхната история показва колко сложна и взаимозависима е връзката им с
                             човечеството.</p>
-                        <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="life-expectancy.html">
+                            <a href="./what-for-you/cat/life-expectancy.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="perks.html">
+                            <a href="./what-for-you/cat/perks.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
