--- a/src/what-for-you/cat/male-or-female.html
+++ b/src/what-for-you/cat/male-or-female.html
@@ -83,15 +83,14 @@
                             ключът е да намерите котка, която да съответства на Вашия начин на живот и предпочитания за
                             личност.</p>
 
-                        <p>&nbsp;</p>
                         <div class="other-article">
-                            <a href="./young-or-adult.html">
+                            <a href="./what-for-you/cat/young-or-adult.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="before.html">
+                            <a href="./what-for-you/cat/before.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
