--- a/src/what-for-you/cat/nature.html
+++ b/src/what-for-you/cat/nature.html
@@ -119,16 +119,15 @@
                                 тялото, за да изразяват емоции. Например, изправена опашка означава дружелюбна и уверена
                                 котка, докато мятаща се опашка сигнализира досада.</li>
                         </ul>
-                        <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="anatomy.html">
+                            <a href="./what-for-you/cat/anatomy.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="life-expectancy.html">
+                            <a href="./what-for-you/cat/life-expectancy.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
