--- a/src/what-for-you/cat/where.html
+++ b/src/what-for-you/cat/where.html
@@ -78,13 +78,13 @@
                             <p>Във всеки един случай, осиновяването на котка води до ново преживяване, изпълнено с любов и чувство на удовлетвореност.</p>
                                                         
                             <div class="other-article">
-                                <a href="male-or-female.html">
+                                <a href="./what-for-you/cat/male-or-female.html">
                                     <div class="other-article-prev">
                                         &laquo; Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="before.html.html">
+                                <a href="./what-for-you/cat/before.html.html">
                                     <div class="other-article-next">
                                         Следваща статия &raquo;
                                     </div>
