--- a/src/what-for-you/cat/young-or-adult.html
+++ b/src/what-for-you/cat/young-or-adult.html
@@ -186,13 +186,13 @@
                         </ol>
 
                         <div class="other-article">
-                            <a href="../breeds/cat-breeds.html">
+                            <a href="./what-for-you/are-you-ready-for-cat/are-you-ready.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./male-or-female.html">
+                            <a href="./what-for-you/cat/male-or-female.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
