--- a/src/what-for-you/breeds/dog-breeds.html
+++ b/src/what-for-you/breeds/dog-breeds.html
@@ -6,46 +6,7 @@
 
 <section id="content-section">
     <section id="article-review">
-        <div>
-            <div>
-                <a href="./../dog/what-for-you.html"><button id="dog-btn-clicked">Куче</button></a>
-                или
-                <a href="../cat/what-for-you.html"><button id="cat-btn">Коте</button></a>
-            </div>
-            <div class="choose-message">Избери вид любимец</div>
-            <ol>
-                <li><a href="../dog/anatomy.html"><span class="bold">Анатомия</span> на кучето</a></li>
-                <li><a href="../dog/nature.html"><span class="bold">Природа</span> на кучето</a></li>
-                <li><a href="../dog/life-expectancy.html"><span class="bold">Продължителност</span> на живота на
-                        кучето</a></li>
-                <li><a href="../dog/brief-history.html">Кратка история на кучето</a></li>
-                <li><a href="../dog/perks.html"><span class="bold">Предимствата</span> да имаш куче</a></li>
-                <li><a href="../are-you-ready/are-you-ready.html">Въпросник: <span class="bold">Готов ли си</span> за
-                        куче?</a></li>
-                <li><a href="../breeds/dog-breed-selector.html">Въпросник: <span class="bold">Какво куче</span> да си
-                        взема?</a></li>
-                <li><a href="../breeds/dog-breeds.html">Библиотека с породи кучета</a></li>
-                <li><a href="../dog/young-or-adult.html"><span class="bold">Малко кученце или пораснало</span> куче да
-                        взема</a></li>
-                <li><a href="../dog/male-or-female.html"><span class="bold">Мъжко или женско</span> куче да взема</a>
-                </li>
-                <li><a href="../dog/where.html"><span class="bold">Откъде</span> мога да се сдобия с куче?</a></li>
-                <li><a href="../dog/before.html"><span class="bold">Въпросник</span> (Контролен списък) преди да си
-                        взема куче</a></li>
-            </ol>
-            <!-- <ol class="left-text">
-                    <li>Група 1: Овчарски и пастирски кучета (с изключение на швейцарско планинско куче)</li>
-                    <li>Група 2: Пинчери и шнауцери. Молосоиди и швейцарски планински кучета</li>
-                    <li>Група 3: Териери</li>
-                    <li>Група 4: Дакели</li>
-                    <li>Група 5: Шпицове и примитивен тип</li>
-                    <li>Група 6: Гончета (следотърсачи) и подобни</li>
-                    <li>Група 7: Ловни кучета, пойнтери </li>
-                    <li>Група 8: Апортиращи, претърсващи и работещи във вода кучета</li>
-                    <li>Група 9: Кучета компаньони и ”Той” кучета</li>
-                    <li>Група 10: Хрътки</li>
-                </ol> -->
-        </div>
+        <include what="@@components/what-for-you-dog.html"></include>
     </section>
 
     <section id="main-content">
