--- a/src/what-for-you/cat/anatomy.html
+++ b/src/what-for-you/cat/anatomy.html
@@ -125,12 +125,11 @@
                             температурата, предпазва от външни влияния и дори помага за сетивното възприятие. Котките се
                             грижат за козината си постоянно, като я почистват, което разпределя естествените масла,
                             които я поддържат мека и водоустойчива.</p>
-                        <p>&nbsp;</p>
-
+                            
                         <div class="other-article">
                             <a style="visibility: hidden;"></a>
 
-                            <a href="nature.html">
+                            <a href="./what-for-you/cat/nature.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
