--- a/src/what-for-you/cat/life-expectancy.html
+++ b/src/what-for-you/cat/life-expectancy.html
@@ -50,13 +50,13 @@
 
 
                         <div class="other-article">
-                            <a href="./nature.html">
+                            <a href="./what-for-you/cat/nature.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./brief-history.html">
+                            <a href="./what-for-you/cat/brief-history.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
