--- a/src/what-for-you/cat/perks.html
+++ b/src/what-for-you/cat/perks.html
@@ -190,13 +190,13 @@
 
 
                         <div class="other-article">
-                            <a href="brief-history.html">
+                            <a href="./what-for-you/cat/brief-history.html">
                                 <div class="other-article-prev">
                                     &laquo; Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./../are-you-ready-cat/are-you-ready.html">
+                            <a href="./what-for-you/are-you-ready-for-cat/are-you-ready.html">
                                 <div class="other-article-next">
                                     Следваща статия &raquo;
                                 </div>
